# Sternhalma

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  SConstruct
Source/: Board.h  Game.h  Move.h  Peg.h  Player.h  Pos60.h  sternh.cpp
docs/: README.md
